# python_scripts

./: .env_base  .gitignore  README.md  pyproject.toml  requirements.txt
encoding_forcing/: basic_request.py  dlwd_file_requests.py
ffmpeg_script/: horizontal_flip_video.py  mp4_to_mp3.py
gestion_excel/: gestion_excel.py  gestion_multiple_excel.py
gestion_file/: file.json  file_path.py  simple_script.py
gestion_pdf/: pdf_format.py  pdf_to_csv.py
image_processing/: img_compressor.py  img_to_pdf.py
randomize_list/: random_list.py
scrap_video/: price_rasp.py
scraping/: connexion_playwright_bs4.py  price_rasp.py  stock_ps4.py  tiktok_scrap.py
scrapping/: price_rasp.py  tiktok_scrap.py
scripts_shell/: ytb_dwld.sh
send_email/: config_file copy.py  email_sending.py  send_email.py
sqlite_table/: basic_sqlite.py
subprocess/: terminal.py
todoist/: connect.py
ytb/: search_ytb_video.py  ytb_dowloader.py  ytb_dowloader_args.py
zip_unzip_file/: zip_unzip_file.py
