[tool.poetry]
name = "scripts_maxvyr"
version = "0.1.0"
description = "my scripts usefull for maxvyr"
authors = ["Maxvyr <maxvid30@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.18.2"
PyPDF2 = "^1.26.0"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
openpyxl = "^3.0.9"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
